# 3d_pose

./: CMakeLists.txt  README.md  gen_exe.txt  gen_so.txt  main  main.cpp  pose.cpp  pose.h  run.sh
include/: YDPeopleSensor.h
include/openpose/core/: maximumCaffe.hpp  netCaffe.hpp  nmsCaffe.hpp  resizeAndMergeCaffe.hpp
include/openpose/pose/: bodyPartConnectorCaffe.hpp  poseExtractorCaffe.hpp  poseParameters.hpp
include/scoring/: pose_detection.hpp  tof_api.hpp  train.hpp  updateEulerForAndroid.hpp
